--- a/src/main/resources/templates/auditWork/prorosalStage/proInfo.html
+++ b/src/main/resources/templates/auditWork/prorosalStage/proInfo.html
@@ -52,7 +52,7 @@
             type:"post",
             data:{ppid:ppid,ppname:ppname,pptype:pptype,ppaudited:ppaudited,starttime:starttime,endtime:endtime,ppjd:ppjd,checkxiang:checkxiang},
         })
-        url="torole?ppid="+ppid;
+        url="torole";
         $("#projectjiben").hide();//点击下一步的时候  隐藏项目基本信息
      $("#iframe").attr("src",url);//然后给ifram的src一个属性  指定页面给src
      $("#iframe").show();//然后iframshow出来
